<resources>
    <string name="total_inventory_value">Valor total del inventario: %.2f€</string>
    <string name="low_stock_alerts">¡Alerta! %d productos con stock bajo</string>
    <string name="total_products">Total productos: %d</string>
    <string name="app_name">Gestión de Inventario de Retail</string>
    <string name="home">Inicio</string>
    <string name="welcoming_user">Bienvenido %s!</string>
    <string name="movements">Movimientos</string>
    <string name="products">Productos</string>
    <string name="reports">Reportes</string>
    <string name="profile">Perfil</string>
    <string name="hash">#</string>
    <string name="id">ID</string>
    <string name="product_name">Nombre del Producto</string>
    <string name="quantity">Cantidad</string>
    <string name="unit">un</string>
    <string name="price">Precio</string>
    <string name="dolar_char">$</string>
    <string name="description">Descripción</string>
    <string name="type">Tipo</string>
    <string name="date">Fecha</string>
    <string name="settings_page">Página de Configuración</string>
    <string name="recent_movements">Movimientos Recientes</string>
    <string name="low_stock">Bajo Stock</string>
    <string name="stock_summary">Resumen de Stock</string>
    <string name="logout">Cerrar sesión</string>
    <string name="settings">Configuraciones</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="user_email">persona.test@email.com</string>
    <string name="user_name">Nombre de la Persona</string>
    <string name="product_list">Lista de Productos</string>
    <string name="add_inventory_movement">Agregar Movimiento de Inventario</string>
    <string name="lougout_confirm_warning">¿Está seguro de que desea cerrar sesión?</string>
    <string name="home_welcom_page">Bienvenido a la Pantalla Principal</string>
    <string name="store_name">Nombre de la tienda</string>
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="save">Guardar</string>
    <string name="add_product">Agregar Producto</string>
    <string name="product_image_preview">Vista Previa de Imagen del Producto</string>
    <string name="update">Actualizar</string>
    <string name="select_product">Seleccionar Producto</string>
    <string name="movement_type">Tipo de Movimiento</string>
    <string name="save_movement">Guardar Movimiento</string>
    <string name="add_movement">Agregar Movimiento</string>
    <string name="welcoming_title">¡Bienvenido de nuevo a la Gestión de Inventario de Retail!</string>
    <string name="enter_your_username">Ingrese su nombre de usuario</string>
    <string name="username">Nombre de Usuario</string>
    <string name="login">Iniciar Sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="enter_your_password">Ingrese su contraseña</string>
    <string name="view_details">Ver detalles</string>
    <string name="generate_report">Generar Reporte</string>
    <string name="reports_resume">Resumen de reportes</string>
    <string name="generate_monthly_report">Generar reporte mensual</string>
    <string name="see_movements">Ver movimientos</string>
    <string name="stock_alerts">Alertas de stock</string>
    <string name="search_products">Buscar productos...</string>
    <string name="last_movements">Últimos movimientos</string>
    <string name="generate_reports">Generar informes</string>
    <string name="generate_monthly_reports">Informe mensual</string>
    <string name="monthly_report_description">Ver informes detallados del mes actual o meses anteriores.</string>
    <string name="category_report">Informe por categorías</string>
    <string name="category_report_description">Analizar el inventario y movimientos agrupados por categorías.</string>
    <string name="last_week_revenue">Ingresos de la última semana</string>
    <string name="revenue_distribution">Distribución de ingresos</string>
    <string name="email">Correo Electrónico</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="view_store_info">Ver Detalles de la Tienda</string>
    <string name="view_reports">Ver Reportes</string>
    <string name="low_stock_product">Productos bajo de stock</string>
    <string name="low_stock_remaining">Bajo de stock quedan: %d unidades</string>
    <string name="movement_type_in">COMPRADO</string>
    <string name="movement_type_out">VENDIDO</string>
    <string name="edit_product">Modificar Producto</string>


</resources>
