<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom_two_lines"
        android:padding="12dp"
        android:text="@string/add_movement"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"/>

    <Spinner
        android:id="@+id/spProduct"
        android:layout_width="match_parent"
        android:layout_height="46sp"
        android:background="@drawable/border_bottom"
        android:hint="@string/select_product" />

    <Spinner
        android:id="@+id/spMovementType"
        android:layout_width="match_parent"
        android:layout_height="46sp"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_bottom"
        android:hint="@string/movement_type" />

    <EditText
        android:id="@+id/etQuantity"
        android:layout_width="match_parent"
        android:layout_height="46sp"
        android:textSize="24dp"
        android:background="@drawable/border_bottom"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:hint="@string/quantity" />

    <Button
        android:id="@+id/btnSaveMovement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24dp"
        android:text="@string/save_movement" />
</LinearLayout>
