<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="0dp"
        android:layout_height="44sp"
        android:layout_weight="2"
        android:background="@drawable/border_right"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/product_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvMovementType"
        android:layout_width="0dp"
        android:layout_height="44sp"
        android:layout_weight="1"
        android:text="@string/type"
        android:background="@drawable/border_right"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="44dp"
        android:layout_height="44sp"
        android:layout_weight="1"
        android:text="@string/quantity"
        android:background="@drawable/border_right"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="44sp"
        android:layout_weight="2"
        android:text="@string/date"
        android:background="@drawable/border_right"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp" />
</LinearLayout>
