<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom_two_lines"
            android:padding="12dp"
            android:text="@string/add_product"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/etProductName"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:textSize="20dp"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            android:gravity="center"
            android:background="@drawable/rounded_background"
            android:hint="@string/product_name" />

        <EditText
            android:id="@+id/etProductQuantity"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:hint="@string/quantity"
            android:gravity="center"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            android:textSize="20dp"
            android:background="@drawable/rounded_background"

            android:inputType="number" />

        <EditText
            android:id="@+id/etProductPrice"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:hint="@string/price"
            android:gravity="center"
            android:background="@drawable/rounded_background"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            android:textSize="20dp"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etProductDescription"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/rounded_background"
            android:hint="@string/description"
            android:gravity="center"
            android:textSize="20dp"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="193dp"
            android:gravity="center"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/border_top_bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivProductImage"
                android:layout_width="260dp"
                android:layout_height="160dp"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:layout_marginEnd="20sp"
                android:layout_marginStart="20sp"
                android:background="@drawable/border_left_right_double_line"
                android:contentDescription="@string/product_image_preview"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_image_24" />

            <ImageButton
                android:id="@+id/btnSelectImage"
                android:layout_width="80sp"
                android:layout_height="40sp"
                android:layout_marginEnd="30sp"
                android:background="@color/primary_button_color"
                android:src="@drawable/baseline_upload_24"
                android:textSize="20sp" />
        </LinearLayout>
        <Button
            android:id="@+id/btnSaveProduct"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginTop="15sp"
            android:text="@string/update"
            android:textColor="@color/primary_button_text_color"
            android:textSize="25dp" />
    </LinearLayout>
</LinearLayout>
