<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="13dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="8dp">
    <Button
        android:id="@+id/btnAddMovement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/primary_button_text_color"
        android:textSize="18dp"
        android:text="@string/add_inventory_movement" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border_top_bottom_double_line"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="0dp"
            android:layout_height="44sp"
            android:layout_weight="2"
            android:background="@drawable/border_right"
            android:text="@string/product_name"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvMovementType"
            android:layout_width="0dp"
            android:layout_height="44sp"
            android:layout_weight="1"
            android:text="@string/type"
            android:background="@drawable/border_right"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="44dp"
            android:layout_height="44sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/border_right"
            android:gravity="center"
            android:text="@string/quantity"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="44sp"
            android:layout_weight="2"
            android:text="@string/date"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovements"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp" />
</LinearLayout>
